# DjangoLoggerSystem

./: .env.sample  .flake8  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
loggers/: __init__.py  adapter.py  base.py  constants.py  exeptions.py  loggers.py  mixins.py  rotators.py  simple_logger.py
products/: urls.py  views.py
products/templates/products/: products_template.html
users/: urls.py  views.py
users/templates/users/: users_template.html
