[project]
name = "django-logger"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Pavlov",email = "yukiu217@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
